@@ -120,8 +120,8 @@ public class frmRf5c68 extends frmBase {
                     }
                     int MUL_L = (newParam.channels[ch].volume * (rf5c68Register.getChannel(ch).pan & 0x0F)) >> 5;
                     int MUL_R = (newParam.channels[ch].volume * (rf5c68Register.getChannel(ch).pan >> 4)) >> 5;
-                    newParam.channels[ch].volumeL = Math.min(Math.max(MUL_L / 3, 0), 19);
-                    newParam.channels[ch].volumeR = Math.min(Math.max(MUL_R / 3, 0), 19);
+                    newParam.channels[ch].volumeL = Math.clamp(MUL_L / 3, 0, 19);
+                    newParam.channels[ch].volumeR = Math.clamp(MUL_R / 3, 0, 19);
                 } else {
                     newParam.channels[ch].volume = 0;
                     newParam.channels[ch].volumeL = 0;
@@ -187,7 +187,7 @@ public class frmRf5c68 extends frmBase {
         }
     };
 
-    private int searchRf5c68Note(int freq) {
+    private static int searchRf5c68Note(int freq) {
         double m = Double.MAX_VALUE;
         int n = 0;
         for (int i = 0; i < 12 * 8; i++) {
